--- a/login/landing.css
+++ b/login/landing.css
@@ -190,7 +190,8 @@ div#top-fold {
 
 .center-logo {
     /* height: 35px; */
-    background-image: url("../3cixty.png");
+    /*background-image: url("../3cixty.png");*/
+    background-image: url("../expo.jpg");
     background-position: 50%;
 }
 
@@ -200,14 +201,16 @@ div#top-fold {
     right: 20px;
     /* height: 26px; */
     background-position: 100% 0;
-    background-image: url("../e015.png");
+    /*background-image: url("../e015.png");*/
+    background-image: url("../EIT-Digital-Landscape.gif");
 }
 
 .left-logo {
     float: left;
     left: 20px;
     background-position: 0;
-    background-image: url("../ExploreMI360.png");
+    /*background-image: url("../ExploreMI360.png");*/
+    background-image: url("../3cixty.png");
 }
 
 .logo.logo-big {
